Added case when player wins

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <div class="clearfix"></div>
       <div class="turn"></div>
+      <span id="winner"></span>
       <button id="cleargame">Reset Game</button>
     </div>
   </div>
