Add section for piece characteristics

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       <h1>Checkers</h1>
       <hr>
       <p>Made by codethejason for <a href="http://fossasia.org">FOSSASIA</a> 2015.</p>
+      <p>Test scripts created by Andersen Stewart, Peyton Dunnaway, and Tanner Dillon.</p>
+    </div>
+    <div class="stats">
+      <h2>Piece Characteristics</h2>
+      <div>
+        <h3>Shape</h3>
+        <div class="selection">
+          <div id="circle_redblue">Red/Blue</div>
+          <div id="circle_whitebrown">White/Brown</div>
+          <div id="circle_greenpink">Green/Pink</div>
+        </div>
+      </div>
     </div>
     <div class="stats">
       <h2>Game Statistics</h2>
