Change divs to buttons for JS

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div>
         <h3>Shape</h3>
         <div class="selection">
-          <div id="circle_redblue">Red/Blue</div>
-          <div id="circle_whitebrown">White/Brown</div>
-          <div id="circle_greenpink">Green/Pink</div>
+          <button id="circle_redblue">Red/Blue</button>
+          <button id="circle_whitebrown">White/Brown</button>
+          <button id="circle_greenpink">Green/Pink</button>
         </div>
       </div>
     </div>
