--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="test_styles.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -56,5 +57,6 @@
         </div>
       </div>
   </div>
+  <script src="test_scripts.js"></script>
 </body>
 </html>
