--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
         </div>
       </div>
     </div>
-    <script src="test_scripts.js"></script>
+    <script src="piece_color.js"></script>
   </body>
 </html>
