Add shape change functionality

--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
       <div class="stats">
         <h2>Piece Characteristics</h2>
         <div>
-          <h3>Shape</h3>
+          <h3>Color</h3>
           <div class="selection">
             <button id="circle_redblue">Red/Blue</button>
             <button id="circle_whitebrown">White/Brown</button>
             <button id="circle_greenpink">Green/Pink</button>
+          </div>
+          <h3>Shape</h3>
+          <div class="selection">
+            <button id="circle">Circle</button>
+            <button id="square">Square</button>
           </div>
       </div>
     </div>
@@ -58,5 +63,6 @@
       </div>
     </div>
     <script src="piece_color.js"></script>
+    <script src="piece_shape.js"></script>
   </body>
 </html>
