Add piece size files and buttons

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <button id="circle">Circle</button>
             <button id="square">Square</button>
           </div>
+          <h3>Size</h3>
+          <div class="selection">
+            <button id="quarter">0.25x</button>
+            <button id="half">0.5x</button>
+            <button id="normal">1x</button>
+            <button id="double">2x</button>
+          </div>
       </div>
     </div>
     <div class="stats">
