Add resizing functionality

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             <button id="quarter">0.25x</button>
             <button id="half">0.5x</button>
             <button id="normal">1x</button>
-            <button id="double">2x</button>
           </div>
       </div>
     </div>
@@ -71,5 +70,6 @@
     </div>
     <script src="piece_color.js"></script>
     <script src="piece_shape.js"></script>
+    <script src="piece_size.js"></script>
   </body>
 </html>
