--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
     <script src="piece_color.js"></script>
     <script src="piece_shape.js"></script>
     <script src="piece_size.js"></script>
+    <script src="board_orientation.js"></script>
   </body>
 </html>
