Drag-n-drop feature

--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
     <script src="piece_shape.js"></script>
     <script src="piece_size.js"></script>
     <script src="board_orientation.js"></script>
+    <script src="dragDrop.js"></script>
   </body>
 </html>
