--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <button id="default">Normal</button>
             <button id="reversed">Reversed</button>
           </div>
+					<h3>Select Theme</h3>
+					<div class="selection">
+						<button id="redBlack">Red/Black</button>
+						<button id="whiteBlack">White/Black</button>
+						<button id="greenBlue">Green/Blue</button>
+					</div>
         </div>
       </div>
       <div class="stats">
@@ -83,5 +89,6 @@
     <script src="piece_size.js"></script>
     <script src="board_orientation.js"></script>
     <script src="dragDrop.js"></script>
+    <script src="board_theme.js"></script>
   </body>
 </html>
